# 3AP_HTTPDataCollector

./: .gitignore  CMakeLists.txt  README.md  install_dependencies.sh
config/: collector-example.json
src/: Configuration.cpp  Configuration.h  Database.cpp  Database.h  Endpoint.h  HttpClient.cpp  HttpClient.h  LicenseManager.cpp  LicenseManager.h  PollScheduler.cpp  PollScheduler.h  api.html  main.cpp
